--- a/calculator.css
+++ b/calculator.css
@@ -1,5 +1,7 @@
-body {
+.calculator {
   width: 500px;
   margin: auto;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.015);
+  margin-top: 30px;
+  padding: 50px;
 }
