--- a/calculator.css
+++ b/calculator.css
@@ -1,7 +1,12 @@
 .calculator {
   width: 500px;
   margin: auto;
-  background-color: rgba(0, 0, 0, 0.015);
+  background-color: rgba(0, 0, 0, 0.025);
   margin-top: 30px;
   padding: 50px;
+  border-radius: 8px;
+}
+
+.calculator div {
+  margin: auto;
 }
