--- a/calculator.css
+++ b/calculator.css
@@ -7,6 +7,18 @@
   border-radius: 8px;
 }
 
-.calculator div {
+.calculator div, .cal-button{
+  display: block;
   margin: auto;
+  padding: 10px;
+}
+
+.calculator h2 {
+  text-align: center;
+  margin:-10px 0 15px 0;
+}
+
+.answer {
+  padding: 10px;
+  margin-top: 20px;
 }
