--- a/calculator.css
+++ b/calculator.css
@@ -11,7 +11,7 @@
   display: block;
   margin: auto;
   padding: 10px;
-}
+}s
 
 .calculator h2 {
   text-align: center;
@@ -21,4 +21,6 @@
 .answer {
   padding: 10px;
   margin-top: 20px;
+  border-radius: 5px;
+  text-align: center;
 }
